Bug 819832 - Patch 1: Sending files to Mac would fail at the end of sending process, r=echou