dom/bluetooth/ObexBase.cpp
@@ -37,6 +37,16 @@ AppendHeaderBody(uint8_t* aRetBuf, uint8_t* aData, int aLength)
 }
 
 int
+AppendHeaderEndOfBody(uint8_t* aRetBuf)
+{
+  aRetBuf[0] = ObexHeaderId::EndOfBody;
+  aRetBuf[1] = 0x00;
+  aRetBuf[2] = 0x03;
+
+  return 3;
+}
+
+int
 AppendHeaderLength(uint8_t* aRetBuf, int aObjectLength)
 {
   aRetBuf[0] = ObexHeaderId::Length;
